--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127.0.0.1\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -352,8 +352,15 @@
     "\n",
     "        def listFiles(username):\n",
     "            print(\"\\nAvailable files for this user: \"+username+\"\\n\\n\")\n",
-    "            for i in range(len(available_files)):\n",
-    "                print(available_files[i])\n",
+    "            features = []\n",
+    "            features.append(\"listfiles\")\n",
+    "            features.append(username)\n",
+    "            features = pickle.dumps(features)\n",
+    "            client.send(features)\n",
+    "            data = client.recv(client_buffer)\n",
+    "            data = pickle.loads(data)\n",
+    "            for i in data:\n",
+    "                print(i)\n",
     "            print()\n",
     "\n",
     "        def readFiles(username):\n",
@@ -503,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1a8709ad",
    "metadata": {},
    "outputs": [
@@ -512,16 +519,37 @@
      "output_type": "stream",
      "text": [
       "Please enter your username:\n",
-      "payodhi\n",
+      "dhruv\n",
       "Please enter your password:\n",
       "········\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> readFile\n",
+      "=> listfile\n",
       "\n",
-      "Please enter directory name to read file\n",
+      "Available files for this user: dhruv\n",
+      "\n",
+      "\n",
+      "chandufile\n",
+      "dharanifile\n",
+      "djp\n",
+      "payodhifile\n",
+      "suryafile\n",
+      "\n",
+      "Hello There!\n",
+      "Enter the operation to be performed\n",
+      "=> writefile\n",
+      "\n",
+      "Please enter directory name to write data\n",
       "common\n",
-      "Please enter file name to read it\n"
+      "Please enter file name\n",
+      "djp\n",
+      "Please enter file content\n",
+      "Hi Everyone\n",
+      "ACK@file data saved at server\n",
+      "\n",
+      "Hello There!\n",
+      "Enter the operation to be performed\n",
+      "=> logout\n"
      ]
     }
    ],
@@ -537,11 +565,37 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8193473",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a0320708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(file_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0989ad59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
