--- a/master/master.ipynb
+++ b/master/master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "65cd24a3",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6cd56fd4",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127.0.0.1\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "\n",
     "# Enter the IPs of the servers in order: [Server1   Server 2   Server 3]\n",
     "#IP = ['10.200.133.129','10.200.133.129','10.200.133.129']\n",
-    "IP = ['192.168.0.9', '192.168.0.9', '192.168.0.9']\n",
+    "IP = ['10.0.0.88', '10.0.0.88', '10.0.0.88']\n",
     "port1 = 8088\n",
     "# This are the ports of the respective srvers port: [Server1   Server 2   Server 3] at whiich master node will connect \n",
     "port = [3333, 3334, 3335]\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e1a02e46",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3aff0af9",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "01f43b08",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "da0be8d2",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d2bef101",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "'def change_permission():\\n    username= str(input())\\n    file_name= str(input())\\n\\n    lock = threading.Lock()\\n\\n    #permission = get_permission(username, file_name)\\n    \\n    #  Give the actual path of the permission\\'s excel sheet present in your devise in variable given below\\n    \\n    file_path = r\\'permissions.xlsx\\'\\n    permissions_dataframe = pd.read_excel(file_path, index_col=0)\\n\\n    permission = permissions_dataframe.loc[username][file_name]\\n\\n    if permission == \"owner\":\\n        print(\"Enter the user whose permission needs to be changed\")\\n        user_name_to_change_permission = str(input())\\n        print(\"Enter the updated permission\")\\n        updated_permission = str(input())\\n\\n        permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\\n\\n        print(permissions_dataframe)\\n\\n        lock.acquire()\\n        with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists=\\'replace\\') as writer:\\n            permissions_dataframe.to_excel(writer, \\'Sheet1\\', index=True)\\n\\n        lock.release()\\n    else:\\n        print(\"You are not authorized to modify the permission\")'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
     "    permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\n",
     "    \n",
     "    lock.acquire()\n",
-    "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists='replace') as writer:\n",
+    "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"a\", if_sheet_exists='replace') as writer:\n",
     "        permissions_dataframe.to_excel(writer, 'Sheet1', index=True)\n",
     "\n",
     "    lock.release()\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "86707fe3",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
     "    print(permissions_dataframe)\n",
     "\n",
     "    lock.acquire()\n",
-    "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists='replace') as writer:\n",
+    "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"a\", if_sheet_exists='replace') as writer:\n",
     "        permissions_dataframe.to_excel(writer, 'Sheet1', index=True)\n",
     "\n",
     "    lock.release()\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "91eb44f2",
    "metadata": {},
    "outputs": [],
@@ -258,9 +258,12 @@
     "#  Getting the data from the client \n",
     "\n",
     "    while True:\n",
+    "        schedule.run_pending()\n",
+    "        time.sleep(1)\n",
     "        data1 = conn.recv(buffer)\n",
     "        content = pickle.loads(data1)\n",
     "        operation = content[0]\n",
+    "        \n",
     "\n",
     "        \n",
     "        def connect_all_server():\n",
@@ -325,6 +328,10 @@
     "                    data = \"You are not the owner of this file\"\n",
     "                    root_logger.error(\"Insufficient permission to delete\")\n",
     "                    conn.send(data.encode())\n",
+    "                    \n",
+    "            elif operation == \"listfile\":\n",
+    "                data = connect_all_server()    \n",
+    "                conn.send(data)\n",
     "            \n",
     "            elif operation == \"changePermission\":\n",
     "                permission = get_permission(content[1], content[2])\n",
@@ -349,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a0373f4f",
    "metadata": {},
    "outputs": [],
@@ -391,46 +398,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server listening upto 996 connections\n",
+      "Server listening upto 995 connections\n",
       "\n",
-      "Total Active connections 5\n",
+      "Total Active connections 7I'm running on thread <Thread(Thread-59, started 28900)>\n",
+      "\n",
+      "I'm running on thread <Thread(Thread-60, started 38536)>\n",
+      "I'm running on thread <Thread(Thread-61, started 38360)>\n",
+      "I'm running on thread <Thread(Thread-62, started 40036)>\n",
+      "I'm running on thread <Thread(Thread-63, started 20088)>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-58:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_25352/485327341.py\", line 9, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Active connections 7I'm running on thread <Thread(Thread-65, started 38684)>\n",
+      "\n",
+      "I'm running on thread <Thread(Thread-66, started 21616)>\n",
+      "I'm running on thread <Thread(Thread-67, started 39524)>\n",
+      "I'm running on thread <Thread(Thread-68, started 40832)>\n",
+      "I'm running on thread <Thread(Thread-69, started 13636)>\n",
       "success\n",
-      "payodhi\n",
-      "            djp payodhifile dharanifile suryafile chandufile   temp  pay12  \\\n",
-      "Username                                                                     \n",
-      "dhruv     owner        read       write      not        read  owner    not   \n",
-      "payodhi   write       owner        read     write        not    not    not   \n",
-      "dharani    read       write       owner      not       write    not    not   \n",
-      "surya       not        read       write     owner      write    not    not   \n",
-      "chandu     read         not         not     write      owner    not    not   \n",
-      "random      not        read        read      read        not    not  owner   \n",
-      "\n",
-      "         pay123  abc12  \n",
-      "Username                \n",
-      "dhruv       not    not  \n",
-      "payodhi     not  owner  \n",
-      "dharani     not    not  \n",
-      "surya       not    not  \n",
-      "chandu      not    not  \n",
-      "random    owner    not  \n",
-      "payodhi\n",
-      "            djp payodhifile dharanifile suryafile chandufile   temp  pay12  \\\n",
-      "Username                                                                     \n",
-      "dhruv     owner        read       write      not        read  owner    not   \n",
-      "payodhi   write       owner        read     write        not    not    not   \n",
-      "dharani    read       write       owner      not       write    not    not   \n",
-      "surya       not        read       write     owner      write    not    not   \n",
-      "chandu     read         not         not     write      owner    not    not   \n",
-      "random      not        read        read      read        not    not  owner   \n",
-      "\n",
-      "         pay123  abc12  \n",
-      "Username                \n",
-      "dhruv       not    not  \n",
-      "payodhi     not  owner  \n",
-      "dharani     not    not  \n",
-      "surya       not    not  \n",
-      "chandu      not    not  \n",
-      "random    owner    not  \n"
+      "User : dhruv ||  File : djp ||  Authorship : owner\n",
+      "I'm running on thread <Thread(Thread-70, started 32192)>\n",
+      "I'm running on thread <Thread(Thread-71, started 21600)>\n",
+      "I'm running on thread <Thread(Thread-72, started 40356)>\n",
+      "I'm running on thread <Thread(Thread-73, started 40900)>\n",
+      "I'm running on thread <Thread(Thread-74, started 36192)>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-64:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_25352/485327341.py\", line 9, in perform_operation\n",
+      "_pickle.UnpicklingError: could not find MARK\n"
      ]
     }
    ],
@@ -442,163 +464,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a3c472",
+   "id": "6454d500",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "923bd57e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e351bdd4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85604189",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Encryption Algorithm\n",
-    "\n",
-    "import os\n",
-    "from cryptography import fernet\n",
-    "from cryptography.fernet import Fernet\n",
-    "\n",
-    "class Encrypter:\n",
-    "\n",
-    "    def createKey(self):\n",
-    "        \n",
-    "\n",
-    "        # creating a variable key_generated to check if key is generated\n",
-    "        key_generated=False\n",
-    "\n",
-    "        while key_generated==False:\n",
-    "\n",
-    "            # Creating A Try Except Block when key folder is not found.\n",
-    "\n",
-    "            try:\n",
-    "                # If the function doesn't raise an exception it creates a file key.key and writes the encryption key in it.\n",
-    "                \n",
-    "                with open('key/key.key','wb') as f:\n",
-    "                    f.write(Fernet.generate_key())\n",
-    "                    f.close()\n",
-    "\n",
-    "                print('Key Generated.')\n",
-    "                key_generated=True\n",
-    "\n",
-    "     \n",
-    "            except:\n",
-    "                # The program raises an exception when it doesn't find the key\n",
-    "                # folder so it creates one instead of throwing an error.\n",
-    "\n",
-    "                os.makedirs('./key')\n",
-    "\n",
-    "    def encryptFile(self,file):\n",
-    "        '''This Function Encrypts the file which is given as the parameter'''\n",
-    "\n",
-    "        # Creating filename variable so that the function extracting only the filename from the file location\n",
-    "        filename=file.split('\\\\')[-1]\n",
-    "\n",
-    "        # Reading the file to get the data from the file \n",
-    "        # so that it can be encrypted in another file\n",
-    "        with open(file,'rb') as f:\n",
-    "            data=f.read()\n",
-    "            f.close()\n",
-    "\n",
-    "\n",
-    "        # Using a Try an Except block to get the encryption key\n",
-    "\n",
-    "        try:\n",
-    "            # Tries to to read the key \n",
-    "            with open('key/key.key','rb') as f:\n",
-    "                key=f.read()\n",
-    "                f.close()\n",
-    "\n",
-    "        except:\n",
-    "            # The function raises an exception if the key is not found\n",
-    "\n",
-    "            print('Key Not Found Please Generate a Key')\n",
-    "\n",
-    "\n",
-    "        # Creating a file_written variable to check if the file is written\n",
-    "        file_written=False\n",
-    "\n",
-    "        # While file is not written \n",
-    "        while file_written==False:\n",
-    "\n",
-    "            # Tries to make a directory if the directory exists then\n",
-    "            # creates the file in that directory  \n",
-    "\n",
-    "            try:\n",
-    "                os.makedirs('./Encrypted Files')\n",
-    "                \n",
-    "            except FileExistsError:\n",
-    "                with open('Encrypted Files/Encrypted {}'.format(filename),'wb') as f:\n",
-    "                    f.write(Fernet(key).encrypt(data))\n",
-    "                    f.close()\n",
-    "                os.remove(file)\n",
-    "                print('File Encrypted')\n",
-    "                file_written=True\n",
-    "\n",
-    "    def decryptFile(self,encryptedfile):\n",
-    "        '''This Function Decrypts the file'''\n",
-    "\n",
-    "        \n",
-    "        filename=encryptedfile.split('\\\\')[-1]\n",
-    "        filename=filename.split(' ')[-1]\n",
-    "\n",
-    "       \n",
-    "        with open(encryptedfile,'rb') as f:\n",
-    "            data=f.read()\n",
-    "            f.close()\n",
-    "\n",
-    "        \n",
-    "        with open('key/key.key','rb') as f:\n",
-    "            key=f.read()\n",
-    "            f.close()\n",
-    "        \n",
-    "        \n",
-    "        file_written=False\n",
-    "\n",
-    "        \n",
-    "\n",
-    "        while file_written==False:\n",
-    "        \n",
-    "            # Tries to make the directory first if directory exist then \n",
-    "            # it creates the original file in the decrypted files directory\n",
-    "            \n",
-    "            try:\n",
-    "            \n",
-    "                os.makedirs('./Decrypted Files')\n",
-    "            \n",
-    "            except FileExistsError:\n",
-    "\n",
-    "\n",
-    "            \n",
-    "                with open('Decrypted Files/{}'.format(filename),'wb') as f:\n",
-    "                    f.write(Fernet(key).decrypt(data))\n",
-    "                    f.close()\n",
-    "            \n",
-    "                print('File Decrypted.')\n",
-    "                file_written=True"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -612,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
