--- a/server1/Server1.ipynb
+++ b/server1/Server1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "5d3c0869",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "5c593b63",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.133.129\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "7cb743bd",
    "metadata": {},
    "outputs": [],
@@ -193,12 +193,16 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            file_list.append(\"ACK@\")\n",
-    "            for root, dirs, directory in os.walk('files/'):\n",
-    "                for j in range(len(directory)):\n",
-    "                    file_list.append(root+\"/\"+directory[j])\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server1/files'\n",
+    "            for root, directories, files in os.walk(path, topdown=False):\n",
+    "                for name in files:\n",
+    "                    file_list.append(name)\n",
+    "                for name in directories:\n",
+    "                    file_list.append(name)\n",
+    "            print(file_list)\n",
+    "            file_list.pop()\n",
     "            file_list = pickle.dumps(file_list)\n",
-    "            conn.send(file_list.encode())\n",
+    "            conn.send(file_list)\n",
     "            print(\"file list sent to user\")        \n",
     "                        \n",
     "                \n",
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ddaa488e",
    "metadata": {},
    "outputs": [],
@@ -293,7 +297,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_14104/433695871.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_2976/3958610515.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -301,11 +305,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 54758)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi there']\n",
-      "writefile\n",
+      "[Connected] Connection Established with ('10.0.0.88', 61669)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
       "Total Active connections 6\n",
-      "file data saved at server: djp\n"
+      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -318,7 +323,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_14104/433695871.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_2976/3958610515.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -326,9 +331,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 60522)Total Active connections 6\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi this is Dhruv']\n",
-      "writefile\n",
+      "[Connected] Connection Established with ('10.0.0.88', 61678)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
+      "writefileTotal Active connections 6\n",
       "\n",
       "file data saved at server: djp\n"
      ]
@@ -343,22 +348,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "590edc9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29e31bc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "341d5692",
    "metadata": {},
    "outputs": [],
    "source": []
