--- a/server3/Server3.ipynb
+++ b/server3/Server3.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.133.129\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -209,12 +209,16 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            file_list.append(\"ACK@\")\n",
-    "            for root, dirs, directory in os.walk('files/'+user):\n",
-    "                for j in range(len(directory)):\n",
-    "                    file_list.append(root+\"/\"+directory[j])\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server3/files'\n",
+    "            for root, directories, files in os.walk(path, topdown=False):\n",
+    "                for name in files:\n",
+    "                    file_list.append(name)\n",
+    "                for name in directories:\n",
+    "                    file_list.append(name)\n",
+    "            print(file_list)\n",
+    "            file_list.pop()\n",
     "            file_list = pickle.dumps(file_list)\n",
-    "            conn.send(file_list.encode())\n",
+    "            conn.send(file_list)\n",
     "            print(\"file list sent to user\")        \n",
     "                        \n",
     "                \n",
@@ -245,28 +249,7 @@
     "                conn.send(features.encode())\n",
     "                print(\"file does not exists\")            \n",
     "            \n",
-    "#         elif operation.lower().strip() == \"read\":\n",
-    "#             read_file = open(\"C:\\\\Users\\dhruv\\Downloads\\py_files\\py_files\\dfs\\mytext.txt\", \"r\")\n",
-    "#             message = read_file.read()\n",
-    "#             data = \"ACK@\"\n",
-    "#             data += message\n",
     "\n",
-    "#             conn.send(data.encode(encoding_format))\n",
-    "            \n",
-    "#         elif operation.lower().strip() == \"create\":\n",
-    "#             data = \"create@\"\n",
-    "#             data += \"Enter the name of the file\"\n",
-    "            \n",
-    "#             conn.send(data.encode(encoding_format))\n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "#         else:\n",
-    "#             data = \"ACK@\"\n",
-    "#             data = operation.lower().strip()\n",
-    "#             data += \".txt\"\n",
-    "#             file_name = open(data, \"x\")\n",
-    "#             conn.send(data.encode(encoding_format))\n",
     "         \n",
     "    #conn.sendall(f\"Hello from server\\n\".encode('utf-8'))\n",
     "    print(f\"[Disconnect] Disconnected {addr} client\")\n",
@@ -332,7 +315,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_22504/1085672972.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_15864/3071624367.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -340,11 +323,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 54760)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi there']\n",
-      "writefile\n",
-      "Total Active connections 6\n",
-      "file data saved at server: djp\n"
+      "[Connected] Connection Established with ('10.0.0.88', 61671)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfilesTotal Active connections 6\n",
+      "\n",
+      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -357,7 +341,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_22504/1085672972.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_15864/3071624367.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -365,10 +349,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 60524)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi this is Dhruv']\n",
-      "writefile\n",
-      "Total Active connections 6\n",
+      "[Connected] Connection Established with ('10.0.0.88', 61680)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
+      "writefileTotal Active connections 6\n",
+      "\n",
       "file data saved at server: djp\n"
      ]
     }
@@ -382,30 +366,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "590edc9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29e31bc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "341d5692",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15a9bddc",
    "metadata": {},
    "outputs": [],
    "source": []
