--- a/server2/Server2.ipynb
+++ b/server2/Server2.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.133.129\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -201,12 +201,16 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            file_list.append(\"ACK@\")\n",
-    "            for root, dirs, directory in os.walk('files/'):\n",
-    "                for j in range(len(directory)):\n",
-    "                    file_list.append(root+\"/\"+directory[j])\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server2/files'\n",
+    "            for root, directories, files in os.walk(path, topdown=False):\n",
+    "                for name in files:\n",
+    "                    file_list.append(name)\n",
+    "                for name in directories:\n",
+    "                    file_list.append(name)\n",
+    "            print(file_list)\n",
+    "            file_list.pop()\n",
     "            file_list = pickle.dumps(file_list)\n",
-    "            conn.send(file_list.encode())\n",
+    "            conn.send(file_list)\n",
     "            print(\"file list sent to user\")        \n",
     "                        \n",
     "                \n",
@@ -236,28 +240,6 @@
     "                conn.send(features.encode())\n",
     "                print(\"file does not exists\")            \n",
     "            \n",
-    "#         elif operation.lower().strip() == \"read\":\n",
-    "#             read_file = open(\"C:\\\\Users\\dhruv\\Downloads\\py_files\\py_files\\dfs\\mytext.txt\", \"r\")\n",
-    "#             message = read_file.read()\n",
-    "#             data = \"ACK@\"\n",
-    "#             data += message\n",
-    "\n",
-    "#             conn.send(data.encode(encoding_format))\n",
-    "            \n",
-    "#         elif operation.lower().strip() == \"create\":\n",
-    "#             data = \"create@\"\n",
-    "#             data += \"Enter the name of the file\"\n",
-    "            \n",
-    "#             conn.send(data.encode(encoding_format))\n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "#         else:\n",
-    "#             data = \"ACK@\"\n",
-    "#             data = operation.lower().strip()\n",
-    "#             data += \".txt\"\n",
-    "#             file_name = open(data, \"x\")\n",
-    "#             conn.send(data.encode(encoding_format))\n",
     "         \n",
     "    #conn.sendall(f\"Hello from server\\n\".encode('utf-8'))\n",
     "    print(f\"[Disconnect] Disconnected {addr} client\")\n",
@@ -323,7 +305,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_10868/4174613175.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34520/2357375211.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -331,11 +313,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 54759)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi there']\n",
-      "writefile\n",
+      "[Connected] Connection Established with ('10.0.0.88', 61670)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
       "Total Active connections 6\n",
-      "file data saved at server: djp\n"
+      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -348,7 +331,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_10868/4174613175.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34520/2357375211.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -356,8 +339,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.133.129', 60523)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'Hi this is Dhruv']\n",
+      "[Connected] Connection Established with ('10.0.0.88', 61679)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
       "writefile\n",
       "Total Active connections 6\n",
       "file data saved at server: djp\n"
@@ -368,22 +351,6 @@
     "if __name__ == \"__main__\":\n",
     "    create_server()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "590edc9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29e31bc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
